--- a/res/layout/gamelist.xml
+++ b/res/layout/gamelist.xml
@@ -7,21 +7,17 @@ android:layout_height="wrap_content">
 	android:id="@+id/table_01"
 	android:layout_width="wrap_content"
 	android:layout_height="wrap_content">
-		<ImageView
+		<com.chess.genesis.MyImageView
 		android:id="@+id/topbar_genesis"
 		android:layout_width="fill_parent"
 		android:layout_height="wrap_content"
-		android:adjustViewBounds="true"
 		android:layout_weight="74"
-		android:scaleType="centerCrop"
 		android:src="@drawable/topbar_genesis" />
-		<ImageView
+		<com.chess.genesis.MyImageView
 		android:id="@+id/topbar_plus"
 		android:layout_width="fill_parent"
 		android:layout_height="wrap_content"
-		android:adjustViewBounds="true"
 		android:layout_weight="407"
-		android:scaleType="centerCrop"
 		android:src="@drawable/topbar_plus" />
 	</TableRow>
 	<ListView
@@ -30,9 +26,8 @@ android:layout_height="wrap_content">
 	android:layout_height="fill_parent"
 	android:layout_below="@id/table_01"
 	android:layout_above="@+id/botbar" />
-	<ImageView
+	<com.chess.genesis.MyImageView
 	android:id="@+id/botbar"
-	android:adjustViewBounds="true"
 	android:layout_width="fill_parent"
 	android:layout_height="wrap_content"
 	android:src="@drawable/botbar"
