--- a/res/layout/gamelist_online.xml
+++ b/res/layout/gamelist_online.xml
@@ -20,12 +20,30 @@ android:layout_height="wrap_content">
 		android:layout_weight="407"
 		android:src="@drawable/topbar_plus" />
 	</TableRow>
+	<TableRow
+	android:id="@+id/table_02"
+	android:layout_width="fill_parent"
+	android:layout_height="wrap_content"
+	android:layout_below="@id/table_01">
+		<Button
+		android:id="@+id/your_move"
+		android:layout_width="fill_parent"
+		android:layout_height="wrap_content"
+		android:layout_weight="50"
+		android:text="Your Move"/>
+		<Button
+		android:id="@+id/there_move"
+		android:layout_width="fill_parent"
+		android:layout_height="wrap_content"
+		android:layout_weight="50"
+		android:text="Their Move"/>
+	</TableRow>
 	<ListView
 	android:id="@+id/game_list"
-	android:layout_width="fill_parent"
-	android:layout_height="fill_parent"
-	android:layout_below="@id/table_01"
-	android:layout_above="@+id/botbar" />
+	android:layout_width="wrap_content"
+	android:layout_height="wrap_content"
+	android:layout_below="@id/table_02"
+	android:layout_above="@id/botbar"/>
 	<com.chess.genesis.MyImageView
 	android:id="@+id/botbar"
 	android:layout_width="fill_parent"
