--- a/res/layout/gamelist_cell_online.xml
+++ b/res/layout/gamelist_cell_online.xml
@@ -1,36 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
 <TableLayout
 xmlns:android="http://schemas.android.com/apk/res/android"
-android:layout_width="wrap_content"
-android:layout_height="wrap_content"
-android:shrinkColumns="true"
-android:stretchColumns="true">
-	<TableRow
-	android:layout_width="wrap_content"
-	android:layout_height="wrap_content">
+android:shrinkColumns="*"
+android:stretchColumns="1">
+	<TableRow>
 		<TextView
-		android:layout_width="wrap_content"
-		android:layout_height="wrap_content"
-		android:textSize="16sp"
-		android:text="Game With: " />
+		android:text="Game With: "
+		android:textSize="16sp"/>
 		<TextView
 		android:id="@+id/game_opp"
-		android:layout_width="wrap_content"
-		android:layout_height="wrap_content"
-		android:textSize="16sp" />
+		android:textSize="16sp"/>
 	</TableRow>
-	<TableRow
-	android:layout_width="wrap_content"
-	android:layout_height="wrap_content">
+	<TableRow>
 		<TextView
-		android:layout_width="wrap_content"
-		android:layout_height="wrap_content"
-		android:textSize="16sp"
-		android:text="Date: " />
+		android:text="Date: "
+		android:textSize="16sp"/>
 		<TextView
 		android:id="@+id/game_date"
-		android:layout_width="wrap_content"
-		android:layout_height="wrap_content"
-		android:textSize="16sp" />
+		android:textSize="16sp"/>
 	</TableRow>
 </TableLayout>
