--- a/res/layout/mainmenu.xml
+++ b/res/layout/mainmenu.xml
@@ -1,34 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout
-xmlns:android="http://schemas.android.com/apk/res/android"
-android:layout_width="wrap_content"
-android:layout_height="wrap_content">
+xmlns:android="http://schemas.android.com/apk/res/android">
 	<com.chess.genesis.MyImageView
 	android:id="@+id/topbar"
-	android:layout_width="fill_parent"
-	android:layout_height="wrap_content"
-	android:src="@drawable/topbar" />
+	style="@style/FillWidth"
+	android:src="@drawable/topbar"/>
 	<Button
 	android:id="@+id/local_game"
-	android:text="Local Game"
-	android:layout_width="fill_parent"
-	android:layout_height="wrap_content"
-	android:layout_below="@id/topbar" />
+	style="@style/FillWidth"
+	android:layout_below="@id/topbar"
+	android:text="Local Game"/>
 	<Button
 	android:id="@+id/online_game"
-	android:layout_width="fill_parent"
-	android:layout_height="wrap_content"
-	android:text="Online Game"
-	android:layout_below="@id/local_game" />
+	style="@style/FillWidth"
+	android:layout_below="@id/local_game"
+	android:text="Online Game"/>
 	<Button
 	android:id="@+id/register"
-	android:layout_width="fill_parent"
-	android:layout_height="wrap_content"
-	android:text="Register"
-	android:layout_below="@id/online_game" />
+	style="@style/FillWidth"
+	android:layout_below="@id/online_game"
+	android:text="Register"/>
 	<com.chess.genesis.MyImageView
-	android:layout_width="fill_parent"
-	android:layout_height="wrap_content"
-	android:src="@drawable/botbar"
-	android:layout_alignParentBottom="true" />
+	style="@style/FillWidth"
+	android:layout_alignParentBottom="true"
+	android:src="@drawable/botbar"/>
 </RelativeLayout>
