--- a/res/layout/new_networkgame.xml
+++ b/res/layout/new_networkgame.xml
@@ -1,68 +1,42 @@
 <?xml version="1.0" encoding="utf-8"?>
 <TableLayout
 xmlns:android="http://schemas.android.com/apk/res/android"
-android:layout_width="wrap_content"
-android:layout_height="wrap_content"
 android:shrinkColumns="*"
-android:stretchColumns="*" >
-	<TableRow
-	android:layout_width="wrap_content"
-	android:layout_height="wrap_content" >
+android:stretchColumns="1">
+	<TableRow>
 		<TextView
-		android:layout_width="wrap_content"
-		android:layout_height="wrap_content"
-		android:text="Game Type:" />
+		android:text="Game Type:"/>
 		<Spinner
-		android:id="@+id/game_type"
-		android:layout_width="wrap_content"
-		android:layout_height="wrap_content" />
+		android:id="@+id/game_type"/>
 	</TableRow>
-	<TableRow
-	android:layout_width="wrap_content"
-	android:layout_height="wrap_content" >
+	<TableRow>
 		<TextView
-		android:layout_width="wrap_content"
-		android:layout_height="wrap_content"
-		android:text="Opponent:" />
+		android:text="Opponent:"/>
 		<RadioGroup
-		android:id="@+id/radio_group"
-		android:layout_width="wrap_content"
-		android:layout_height="wrap_content" >
+		android:id="@+id/radio_group">
 			<RadioButton
 			android:id="@+id/random_opp"
 			android:text="Random"
-			android:checked="true" />
+			android:checked="true"/>
 			<RadioButton
 			android:id="@+id/invite_opp"
 			android:text="Invite"
-			android:checked="false" />
+			android:checked="false"/>
 		</RadioGroup>
 	</TableRow>
-	<TableRow
-	android:layout_width="wrap_content"
-	android:layout_height="wrap_content" >
+	<TableRow>
 		<TextView
-		android:layout_width="wrap_content"
-		android:layout_height="wrap_content"
-		android:text="Username:" />
+		android:text="Username:"/>
 		<EditText
 		android:id="@+id/opp_name"
-		android:layout_width="wrap_content"
-		android:layout_height="wrap_content"
-		android:enabled="false" />
+		android:enabled="false"/>
 	</TableRow>
-	<TableRow
-	android:layout_width="wrap_content"
-	android:layout_height="wrap_content" >
+	<TableRow>
 		<Button
 		android:id="@+id/newgame_cancel"
-		android:layout_width="wrap_content"
-		android:layout_height="wrap_content"
-		android:text="Cancel" />
+		android:text="Cancel"/>
 		<Button
 		android:id="@+id/newgame_ok"
-		android:layout_width="wrap_content"
-		android:layout_height="wrap_content"
-		android:text="Submit" />
+		android:text="Submit"/>
 	</TableRow>
 </TableLayout>
