--- a/res/layout/rename_game.xml
+++ b/res/layout/rename_game.xml
@@ -1,26 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout
-xmlns:android="http://schemas.android.com/apk/res/android"
-android:layout_width="wrap_content"
-android:layout_height="wrap_content">
+xmlns:android="http://schemas.android.com/apk/res/android">
 	<EditText
 	android:id="@+id/game_name_input"
-	android:layout_width="fill_parent"
-	android:layout_height="wrap_content"
+	style="@style/FillWidth"
 	android:singleLine="true"
-	android:maxLength="24" />
+	android:maxLength="24"/>
 	<Button
 	android:id="@+id/rename_cancel"
-	android:layout_width="wrap_content"
-	android:layout_height="wrap_content"
 	android:layout_below="@id/game_name_input"
 	android:layout_alignLeft="@id/game_name_input"
-	android:text="Cancel" />
+	android:text="Cancel"/>
 	<Button
 	android:id="@+id/rename_ok"
-	android:layout_width="wrap_content"
-	android:layout_height="wrap_content"
 	android:layout_below="@id/game_name_input"
 	android:layout_alignRight="@id/game_name_input"
-	android:text="Save" />
+	android:text="Save"/>
 </RelativeLayout>
