add login activity with game syncing
instead of a register activity, there's now a login activity that
has a button to register. When logging in, the list of games are
fetched from the server and matched to what is already in the database.

--- a/res/layout/mainmenu.xml
+++ b/res/layout/mainmenu.xml
@@ -16,10 +16,10 @@ xmlns:android="http://schemas.android.com/apk/res/android">
 	android:layout_below="@id/local_game"
 	android:text="Online Game"/>
 	<Button
-	android:id="@+id/register"
+	android:id="@+id/login"
 	style="@style/FillWidth"
 	android:layout_below="@id/online_game"
-	android:text="Register"/>
+	android:text="Login"/>
 	<com.chess.genesis.MyImageView
 	style="@style/FillWidth"
 	android:layout_alignParentBottom="true"
