--- a/res/layout/login.xml
+++ b/res/layout/login.xml
@@ -4,6 +4,7 @@ xmlns:android="http://schemas.android.com/apk/res/android">
 	<com.chess.genesis.MyImageView
 	android:id="@+id/topbar"
 	style="@style/FillWidth"
+	android:layout_span="2"
 	android:src="@drawable/topbar"/>
 	<TableLayout
 	android:id="@+id/table01"
@@ -31,29 +32,23 @@ xmlns:android="http://schemas.android.com/apk/res/android">
 			android:maxLength="22"
 			android:password="true"/>
 		</TableRow>
-		<TableRow>
-			<TextView
-			android:padding="12dp"
-			android:text="Password:"/>
-			<EditText
-			android:id="@+id/password2"
-			style="@style/FillWidth"
-			android:singleLine="true"
-			android:maxLength="22"
-			android:password="true"/>
-		</TableRow>
 	</TableLayout>
 	<Button
-	android:id="@+id/back"
-	android:layout_width="120dp"
+	android:id="@+id/logout"
+	android:width="120dp"
 	android:layout_below="@id/table01"
 	android:layout_alignLeft="@id/table01"
-	android:text="Back"/>
+	android:text="Logout"/>
 	<Button
-	android:id="@+id/register"
-	android:layout_width="120dp"
+	android:id="@+id/login"
+	android:width="120dp"
 	android:layout_below="@id/table01"
 	android:layout_alignRight="@id/table01"
+	android:text="Login"/>
+	<Button
+	android:id="@+id/register"
+	style="@style/FillWidth"
+	android:layout_above="@id/botbar"
 	android:text="Register"/>
 	<com.chess.genesis.MyImageView
 	android:id="@+id/botbar"
