change bottom ingame bar to include move history buttons
the place piece button has been shrunk to make room for the
backwards, forwards and current buttons that navigate through
the move history.

All images have been reoptimized.

--- a/res/layout/game.xml
+++ b/res/layout/game.xml
@@ -16,9 +16,27 @@ xmlns:android="http://schemas.android.com/apk/res/android">
 	<TextView
 	android:id="@+id/stm_txt"
 	android:layout_below="@id/board_flip"/>
-	<com.chess.genesis.MyImageView
-	android:id="@+id/place_piece"
-	style="@style/FillWidth"
-	android:layout_alignParentBottom="true"
-	android:src="@drawable/place_piece"/>
+	<TableRow
+	android:layout_alignParentBottom="true">
+		<com.chess.genesis.MyImageView
+		android:id="@+id/place_piece"
+		style="@style/FillWidth"
+		android:layout_weight="243"
+		android:src="@drawable/place_piece"/>
+		<com.chess.genesis.MyImageView
+		android:id="@+id/backwards"
+		style="@style/FillWidth"
+		android:layout_weight="398"
+		android:src="@drawable/backwards"/>
+		<com.chess.genesis.MyImageView
+		android:id="@+id/forwards"
+		style="@style/FillWidth"
+		android:layout_weight="398"
+		android:src="@drawable/forwards"/>
+		<com.chess.genesis.MyImageView
+		android:id="@+id/current"
+		style="@style/FillWidth"
+		android:layout_weight="398"
+		android:src="@drawable/current"/>
+	</TableRow>
 </RelativeLayout>
