--- a/res/layout/login.xml
+++ b/res/layout/login.xml
@@ -4,52 +4,58 @@ xmlns:android="http://schemas.android.com/apk/res/android">
 	<com.chess.genesis.MyImageView
 	android:id="@+id/topbar"
 	style="@style/FillWidth"
-	android:layout_span="2"
 	android:src="@drawable/topbar"/>
-	<TableLayout
-	android:id="@+id/table01"
+
+	<TextView
+	android:id="@+id/username_header"
 	android:layout_below="@id/topbar"
-	android:shrinkColumns="*"
-	android:stretchColumns="1">
-		<TableRow>
-			<TextView
-			android:padding="12dp"
-			android:text="User Name:"/>
-			<EditText
-			android:id="@+id/username"
-			style="@style/FillWidth"
-			android:singleLine="true"
-			android:maxLength="16"/>
-		</TableRow>
-		<TableRow>
-			<TextView
-			android:padding="12dp"
-			android:text="Password:"/>
-			<EditText
-			android:id="@+id/password"
-			style="@style/FillWidth"
-			android:singleLine="true"
-			android:maxLength="22"
-			android:password="true"/>
-		</TableRow>
-	</TableLayout>
-	<Button
-	android:id="@+id/logout"
-	android:width="120dp"
-	android:layout_below="@id/table01"
-	android:layout_alignLeft="@id/table01"
-	android:text="Logout"/>
-	<Button
-	android:id="@+id/login"
-	android:width="120dp"
-	android:layout_below="@id/table01"
-	android:layout_alignRight="@id/table01"
-	android:text="Login"/>
-	<Button
-	android:id="@+id/register"
+	android:layout_alignParentLeft="true"
+	android:layout_marginTop="6dp"
+	android:layout_marginLeft="12dp"
+	android:textSize="15sp"
+	android:text="User Name"/>
+	<EditText
+	android:id="@+id/username"
 	style="@style/FillWidth"
+	android:layout_below="@id/username_header"
+	android:layout_marginLeft="6dp"
+	android:layout_marginRight="6dp"
+	android:singleLine="true"
+	android:maxLength="16"/>
+
+	<TextView
+	android:id="@+id/password_header"
+	android:layout_below="@id/username"
+	android:layout_alignParentLeft="true"
+	android:layout_marginLeft="12dp"
+	android:textSize="15sp"
+	android:text="Password"/>
+	<EditText
+	android:id="@+id/password"
+	style="@style/FillWidth"
+	android:layout_below="@id/password_header"
+	android:layout_marginLeft="6dp"
+	android:layout_marginRight="6dp"
+	android:singleLine="true"
+	android:maxLength="22"
+	android:password="true"/>
+
+	<com.chess.genesis.MyImageView
+	android:id="@+id/login"
+	android:layout_width="120dp"
+	android:layout_below="@id/password"
+	android:layout_alignParentRight="true"
+	android:paddingTop="6dp"
+	android:paddingRight="8dp"
+	android:src="@drawable/login"/>
+	<com.chess.genesis.MyImageView
+	android:id="@+id/register"
+	android:layout_width="120dp"
 	android:layout_above="@id/botbar"
-	android:text="Register"/>
+	android:layout_alignParentRight="true"
+	android:paddingBottom="6dp"
+	android:paddingRight="8dp"
+	android:src="@drawable/signup"/>
 	<com.chess.genesis.MyImageView
 	android:id="@+id/botbar"
 	style="@style/FillWidth"
