rename/fix register images
minor name changes and image correction to login and register pages
	signup -> register
	submit -> rsubmit
	delete signup
	update login

--- a/res/layout/login.xml
+++ b/res/layout/login.xml
@@ -55,7 +55,7 @@ xmlns:android="http://schemas.android.com/apk/res/android">
 	android:layout_alignParentRight="true"
 	android:paddingBottom="6dp"
 	android:paddingRight="8dp"
-	android:src="@drawable/signup"/>
+	android:src="@drawable/register"/>
 	<com.chess.genesis.MyImageView
 	android:id="@+id/botbar"
 	style="@style/FillWidth"
