--- a/res/values/styles.xml
+++ b/res/values/styles.xml
@@ -12,4 +12,10 @@
 		<item name="android:layout_width">fill_parent</item>
 		<item name="android:layout_height">fill_parent</item>
 	</style>
+	<style name="NoDimDialog" parent="@android:style/Theme.Panel">
+		<item name="android:backgroundDimAmount">0.0</item>
+		<item name="android:backgroundDimEnabled">false</item>
+		<item name="android:layout_width">wrap_content</item>
+		<item name="android:layout_height">wrap_content</item>
+	</style>
 </resources>
