update the mainmenu, archive game list and register pages
mainmenu adds a "how to play" and "like on facebook".
archive game list removes the add new game button.
register adds a notice about account activation.

--- a/res/layout/gamelist_local.xml
+++ b/res/layout/gamelist_local.xml
@@ -18,7 +18,7 @@ xmlns:android="http://schemas.android.com/apk/res/android">
 	android:id="@+id/game_list"
 	style="@style/FillBoth"
 	android:layout_below="@id/table_01"
-	android:layout_above="@+id/botbar"/>
+	android:layout_above="@id/botbar"/>
 	<com.chess.genesis.MyImageView
 	android:id="@+id/botbar"
 	style="@style/FillWidth"
