--- a/res/layout/register.xml
+++ b/res/layout/register.xml
@@ -82,6 +82,16 @@ xmlns:android="http://schemas.android.com/apk/res/android">
 	android:paddingTop="6dp"
 	android:paddingRight="8dp"
 	android:src="@drawable/rsubmit"/>
+
+	<TextView
+	android:layout_above="@id/botbar"
+	android:layout_alignParentLeft="true"
+	android:paddingLeft="12dp"
+	android:paddingRight="12dp"
+	android:paddingBottom="6dp"
+	android:textSize="15sp"
+	android:text="@string/register_notice"/>
+
 	<com.chess.genesis.MyImageView
 	android:id="@+id/botbar"
 	style="@style/FillWidth"
