--- a/res/layout/register.xml
+++ b/res/layout/register.xml
@@ -86,10 +86,10 @@ xmlns:android="http://schemas.android.com/apk/res/android">
 	<TextView
 	android:layout_above="@id/botbar"
 	android:layout_alignParentLeft="true"
-	android:paddingLeft="12dp"
-	android:paddingRight="12dp"
-	android:paddingBottom="6dp"
-	android:textSize="15sp"
+	android:paddingLeft="6dp"
+	android:paddingRight="6dp"
+	android:paddingBottom="3dp"
+	android:textColor="#f00"
 	android:text="@string/register_notice"/>
 
 	<com.chess.genesis.MyImageView
