--- a/res/layout/mainmenu.xml
+++ b/res/layout/mainmenu.xml
@@ -5,10 +5,17 @@ xmlns:android="http://schemas.android.com/apk/res/android">
 	android:id="@+id/topbar"
 	style="@style/FillWidth"
 	android:src="@drawable/topbar"/>
+	<TextView
+	android:id="@+id/welcome"
+	android:layout_below="@id/topbar"
+	android:paddingLeft="6dp"
+	android:paddingBottom="3dp"
+	android:textStyle="bold"
+	android:textSize="15dp"/>
 	<Button
 	android:id="@+id/local_game"
 	style="@style/FillWidth"
-	android:layout_below="@id/topbar"
+	android:layout_below="@id/welcome"
 	android:text="Local Games"/>
 	<Button
 	android:id="@+id/online_game"
