--- a/res/layout/mainmenu.xml
+++ b/res/layout/mainmenu.xml
@@ -42,7 +42,14 @@ xmlns:android="http://schemas.android.com/apk/res/android">
 	style="@style/FillWidth"
 	android:layout_below="@id/likefacebook"
 	android:text="Login"/>
+	<TextView
+	android:layout_above="@id/botbar"
+	android:layout_alignParentRight="true"
+	android:paddingRight="3dp"
+	android:textSize="10dp"
+	android:text="@string/version"/>
 	<com.chess.genesis.MyImageView
+	android:id="@+id/botbar"
 	style="@style/FillWidth"
 	android:layout_alignParentBottom="true"
 	android:src="@drawable/botbar"/>
