--- a/res/layout/invite_options.xml
+++ b/res/layout/invite_options.xml
@@ -12,37 +12,21 @@ xmlns:android="http://schemas.android.com/apk/res/android">
 	android:stretchColumns="1">
 		<TableRow>
 			<TextView
-			android:layout_gravity="right"
+			android:layout_gravity="right|center_vertical"
 			android:paddingRight="6dp"
 			android:textColor="#000000"
-			android:text="Username:"/>
+			android:text="User Name:"/>
 			<EditText
 			android:id="@+id/opp_name"/>
 		</TableRow>
 		<TableRow>
 			<TextView
-			android:layout_gravity="right"
+			android:layout_gravity="right|center_vertical"
 			android:paddingRight="6dp"
 			android:textColor="#000000"
 			android:text="Your Color:"/>
-			<RadioGroup
-			android:id="@+id/invite_color">
-				<RadioButton
-				android:id="@+id/random_color"
-				android:textColor="#000000"
-				android:text="Random"
-				android:checked="true"/>
-				<RadioButton
-				android:id="@+id/white_color"
-				android:textColor="#000000"
-				android:text="White"
-				android:checked="false"/>
-				<RadioButton
-				android:id="@+id/black_color"
-				android:textColor="#000000"
-				android:text="Black"
-				android:checked="false"/>
-			</RadioGroup>
+			<Spinner
+			android:id="@+id/invite_color"/>
 		</TableRow>
 	</TableLayout>
 	<TableRow
