--- a/res/layout/newlocalgame.xml
+++ b/res/layout/newlocalgame.xml
@@ -12,6 +12,7 @@ xmlns:android="http://schemas.android.com/apk/res/android">
 	android:stretchColumns="1">
 		<TableRow>
 			<TextView
+			android:layout_gravity="right|center_vertical"
 			android:paddingRight="6dp"
 			android:textColor="#000000"
 			android:text="Game Name:"/>
@@ -20,6 +21,8 @@ xmlns:android="http://schemas.android.com/apk/res/android">
 		</TableRow>
 		<TableRow>
 			<TextView
+			android:layout_gravity="right|center_vertical"
+			android:paddingRight="6dp"
 			android:textColor="#000000"
 			android:text="Game Type:"/>
 			<Spinner
@@ -27,6 +30,8 @@ xmlns:android="http://schemas.android.com/apk/res/android">
 		</TableRow>
 		<TableRow>
 			<TextView
+			android:layout_gravity="right|center_vertical"
+			android:paddingRight="6dp"
 			android:textColor="#000000"
 			android:text="Opponent:"/>
 			<Spinner
