--- a/res/menu/game_options_online.xml
+++ b/res/menu/game_options_online.xml
@@ -2,9 +2,6 @@
 <menu
 xmlns:android="http://schemas.android.com/apk/res/android">
 	<item
-	android:id="@+id/takeback_move"
-	android:title="Take Back Move" />
-	<item
-	android:id="@+id/forward_move"
-	android:title="Forward Move" />
+	android:id="@+id/first_move"
+	android:title="First Move"/>
 </menu>
