--- a/res/menu/game_options_online.xml
+++ b/res/menu/game_options_online.xml
@@ -7,4 +7,7 @@ xmlns:android="http://schemas.android.com/apk/res/android">
 	<item
 	android:id="@+id/resync"
 	android:title="Update"/>
+	<item
+	android:id="@+id/resign"
+	android:title="Resign"/>
 </menu>
