--- a/res/menu/gamelist_context_archive.xml
+++ b/res/menu/gamelist_context_archive.xml
@@ -4,4 +4,7 @@ xmlns:android="http://schemas.android.com/apk/res/android">
 	<item
 	android:id="@+id/delete_game"
 	android:title="Delete Game" />
+	<item
+	android:id="@+id/local_copy"
+	android:title="Make Local Copy" />
 </menu>
