--- a/res/menu/gamelist_context_online.xml
+++ b/res/menu/gamelist_context_online.xml
@@ -1,4 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu
 xmlns:android="http://schemas.android.com/apk/res/android">
+	<item
+	android:id="@+id/local_copy"
+	android:title="Make Local Copy" />
 </menu>
