--- a/res/menu/gamelist_context_archive.xml
+++ b/res/menu/gamelist_context_archive.xml
@@ -7,4 +7,7 @@ xmlns:android="http://schemas.android.com/apk/res/android">
 	<item
 	android:id="@+id/local_copy"
 	android:title="Make Local Copy" />
+	<item
+	android:id="@+id/rematch"
+	android:title="Rematch Opponent" />
 </menu>
