--- a/res/layout/register_activation.xml
+++ b/res/layout/register_activation.xml
@@ -3,9 +3,12 @@
 xmlns:android="http://schemas.android.com/apk/res/android">
 	<TextView
 	android:id="@+id/text01"
+	android:background="#ffffff"
+	android:textColor="#000000"
+	android:paddingTop="12dp"
+	android:paddingBottom="12dp"
 	android:paddingLeft="6dp"
 	android:paddingRight="6dp"
-	android:paddingBottom="12dp"
 	android:text="@string/register_activation"/>
 	<Button
 	android:id="@+id/close"
