--- a/res/menu/game_options_local.xml
+++ b/res/menu/game_options_local.xml
@@ -4,4 +4,7 @@ xmlns:android="http://schemas.android.com/apk/res/android">
 	<item
 	android:id="@+id/first_move"
 	android:title="First Move"/>
+	<item
+	android:id="@+id/cpu_time"
+	android:title="Set CPU Time"/>
 </menu>
