--- a/res/layout/gamelist_cell_archive.xml
+++ b/res/layout/gamelist_cell_archive.xml
@@ -1,22 +1,29 @@
 <?xml version="1.0" encoding="utf-8"?>
-<TableLayout
-xmlns:android="http://schemas.android.com/apk/res/android"
-android:shrinkColumns="*"
-android:stretchColumns="1">
-	<TableRow>
-		<TextView
-		android:text="Game With: "
-		android:textSize="16sp"/>
-		<TextView
-		android:id="@+id/game_opp"
-		android:textSize="16sp"/>
-	</TableRow>
-	<TableRow>
-		<TextView
-		android:text="Date: "
-		android:textSize="16sp"/>
-		<TextView
-		android:id="@+id/game_date"
-		android:textSize="16sp"/>
-	</TableRow>
-</TableLayout>
+<RelativeLayout
+xmlns:android="http://schemas.android.com/apk/res/android">
+	<com.chess.genesis.MyImageView
+	android:id="@+id/cell_icon"
+	android:layout_alignParentLeft="true"
+	android:layout_centerVertical="true"
+	android:layout_height="40dp"
+	android:layout_width="40dp"/>
+	<TextView
+	android:id="@+id/game_with"
+	android:layout_toRightOf="@id/cell_icon"
+	android:layout_alignParentTop="true"
+	android:paddingLeft="6dp"
+	android:textStyle="bold"
+	android:textSize="18dp"/>
+	<TextView
+	android:id="@+id/game_type"
+	android:layout_toRightOf="@id/cell_icon"
+	android:layout_alignParentBottom="true"
+	android:paddingLeft="6dp"
+	android:textSize="14dp"/>
+	<TextView
+	android:id="@+id/game_time"
+	android:layout_alignParentRight="true"
+	android:layout_alignParentBottom="true"
+	android:paddingRight="6dp"
+	android:textSize="14dp"/>
+</RelativeLayout>
