add "Register" to the main menu login button
The register page is accessed through the login page. This is not
clear, so add the word "/ Register" to the main menu button.

--- a/res/layout/mainmenu.xml
+++ b/res/layout/mainmenu.xml
@@ -41,7 +41,7 @@ xmlns:android="http://schemas.android.com/apk/res/android">
 	android:id="@+id/login"
 	style="@style/FillWidth"
 	android:layout_below="@id/likefacebook"
-	android:text="Login"/>
+	android:text="Login / Register"/>
 	<TextView
 	android:layout_above="@id/botbar"
 	android:layout_alignParentRight="true"
