--- a/res/layout/mainmenu.xml
+++ b/res/layout/mainmenu.xml
@@ -12,36 +12,40 @@ xmlns:android="http://schemas.android.com/apk/res/android">
 	android:paddingBottom="3dp"
 	android:textStyle="bold"
 	android:textSize="15dp"/>
-	<Button
-	android:id="@+id/local_game"
-	style="@style/FillWidth"
+	<TableLayout
 	android:layout_below="@id/welcome"
-	android:text="Local Games"/>
-	<Button
-	android:id="@+id/online_game"
-	style="@style/FillWidth"
-	android:layout_below="@id/local_game"
-	android:text="Online Games"/>
-	<Button
-	android:id="@+id/archive_game"
-	style="@style/FillWidth"
-	android:layout_below="@id/online_game"
-	android:text="Archived Games"/>
-	<Button
-	android:id="@+id/howtoplay"
-	style="@style/FillWidth"
-	android:layout_below="@id/archive_game"
-	android:text="How To Play"/>
-	<Button
+	android:shrinkColumns="*"
+	android:stretchColumns="*">
+		<TableRow>
+			<com.chess.genesis.MyImageView
+			android:id="@+id/local_game"
+			android:src="@drawable/localplay"/>
+			<com.chess.genesis.MyImageView
+			android:id="@+id/online_game"
+			android:src="@drawable/onlinematches"/>
+			<com.chess.genesis.MyImageView
+			android:id="@+id/archive_game"
+			android:src="@drawable/recordedgames"/>
+		</TableRow>
+		<TableRow>
+			<com.chess.genesis.MyImageView
+			android:id="@+id/howtoplay"
+			android:src="@drawable/howtoplay"/>
+			<com.chess.genesis.MyImageView
+			android:id="@+id/login"
+			android:src="@drawable/mainlogin"/>
+			<com.chess.genesis.MyImageView
+			android:src="@drawable/padding_96x96"/>
+		</TableRow>
+	</TableLayout>
+	<com.chess.genesis.MyImageView
 	android:id="@+id/likefacebook"
-	style="@style/FillWidth"
-	android:layout_below="@id/howtoplay"
-	android:text="Like On Facebook"/>
-	<Button
-	android:id="@+id/login"
-	style="@style/FillWidth"
-	android:layout_below="@id/likefacebook"
-	android:text="Login / Register"/>
+	android:layout_width="160dp"
+	android:layout_above="@id/botbar"
+	android:layout_alignParentLeft="true"
+	android:paddingBottom="3dp"
+	android:paddingLeft="3dp"
+	android:src="@drawable/facebook"/>
 	<TextView
 	android:layout_above="@id/botbar"
 	android:layout_alignParentRight="true"
