--- a/res/layout/mainmenu.xml
+++ b/res/layout/mainmenu.xml
@@ -32,10 +32,11 @@ xmlns:android="http://schemas.android.com/apk/res/android">
 			android:id="@+id/howtoplay"
 			android:src="@drawable/howtoplay"/>
 			<com.chess.genesis.MyImageView
+			android:id="@+id/settings"
+			android:src="@drawable/settings"/>
+			<com.chess.genesis.MyImageView
 			android:id="@+id/login"
 			android:src="@drawable/mainlogin"/>
-			<com.chess.genesis.MyImageView
-			android:src="@drawable/padding_96x96"/>
 		</TableRow>
 	</TableLayout>
 	<com.chess.genesis.MyImageView
