--- a/res/menu/game_options_online.xml
+++ b/res/menu/game_options_online.xml
@@ -10,4 +10,7 @@ xmlns:android="http://schemas.android.com/apk/res/android">
 	<item
 	android:id="@+id/resign"
 	android:title="Resign"/>
+	<item
+	android:id="@+id/chat"
+	android:title="Chat"/>
 </menu>
