--- a/res/layout/game_local.xml
+++ b/res/layout/game_local.xml
@@ -1,22 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout
 xmlns:android="http://schemas.android.com/apk/res/android">
-	<TableRow
-	android:id="@+id/table_01">
-		<com.chess.genesis.MyImageView
-		android:id="@+id/topbar_genesis"
-		style="@style/FillWidth"
-		android:layout_weight="82"
-		android:src="@drawable/topbar_genesis"/>
-		<com.chess.genesis.MyImageView
-		android:id="@+id/chat"
-		style="@style/FillWidth"
-		android:layout_weight="408"
-		android:src="@drawable/chat"/>
-	</TableRow>
+	<com.chess.genesis.MyImageView
+	android:id="@+id/topbar"
+	style="@style/FillWidth"
+	android:src="@drawable/topbar"/>
 	<com.chess.genesis.ViewFlip3D
 	android:id="@+id/board_flip"
-	android:layout_below="@id/table_01">
+	android:layout_below="@id/topbar">
 		<com.chess.genesis.BoardLayout
 		android:id="@+id/board_layout"/>
 		<com.chess.genesis.PlaceLayout
