use margin instead of padding in xml layout files
layout_margin should be prefered instead of padding when trying
to create a space between two views. This changes the most obvious
cases. The remaining cases usually involve EditText and Spinner
views which require padding to prevent the view from being cut off.

--- a/res/layout/newlocalgame.xml
+++ b/res/layout/newlocalgame.xml
@@ -41,7 +41,7 @@ xmlns:android="http://schemas.android.com/apk/res/android">
 	<TableRow
 	style="@style/FillWidth"
 	android:layout_below="@id/table01"
-	android:paddingTop="6dp">
+	android:layout_marginTop="6dp">
 		<Button
 		style="@style/FillWidth"
 		android:layout_weight="50"
