--- a/res/layout/copygame_confirm.xml
+++ b/res/layout/copygame_confirm.xml
@@ -16,7 +16,7 @@ xmlns:android="http://schemas.android.com/apk/res/android">
 	<TableRow
 	style="@style/FillWidth"
 	android:layout_below="@id/table01"
-	android:paddingTop="6dp">
+	android:layout_marginTop="6dp">
 		<Button
 		android:id="@+id/copy_cancel"
 		style="@style/FillWidth"
