--- a/res/layout/cputime_dialog.xml
+++ b/res/layout/cputime_dialog.xml
@@ -26,7 +26,7 @@ xmlns:android="http://schemas.android.com/apk/res/android">
 				android:layout_width="72dp"/>
 				<TextView
 				android:textSize="18dp"
-				android:paddingLeft="6dp"
+				android:layout_marginLeft="6dp"
 				android:textColor="#000000"
 				android:layout_gravity="center"
 				android:gravity="center"
@@ -37,7 +37,7 @@ xmlns:android="http://schemas.android.com/apk/res/android">
 	<TableRow
 	style="@style/FillWidth"
 	android:layout_below="@id/layout01"
-	android:paddingTop="6dp">
+	android:layout_marginTop="6dp">
 		<Button
 		android:id="@+id/cputime_cancel"
 		style="@style/FillWidth"
