--- a/res/layout/endgame.xml
+++ b/res/layout/endgame.xml
@@ -9,29 +9,29 @@ xmlns:android="http://schemas.android.com/apk/res/android">
 	android:paddingRight="6dp"
 	android:layout_centerHorizontal="true">
 		<TableRow
-		android:padding="2dp">
+		android:layout_margin="2dp">
 			<TextView
 			android:layout_gravity="right"
-			android:paddingRight="12dp"
+			android:layout_marginRight="12dp"
 			android:text="Oppenent :"/>
 			<TextView
 			android:id="@+id/opponent"/>
 		</TableRow>
 		<TableRow
-		android:padding="2dp">
+		android:layout_margin="2dp">
 			<TextView
 			android:layout_gravity="right"
-			android:paddingRight="12dp"
+			android:layout_marginRight="12dp"
 			android:text="Result :"/>
 			<TextView
 			android:id="@+id/result"/>
 		</TableRow>
 		<TableRow
-		android:padding="2dp">
+		android:layout_margin="2dp">
 			<TextView
 			android:id="@+id/psr_type"
 			android:layout_gravity="right"
-			android:paddingRight="12dp"/>
+			android:layout_marginRight="12dp"/>
 			<TextView
 			android:id="@+id/psr_score"/>
 		</TableRow>
@@ -40,6 +40,6 @@ xmlns:android="http://schemas.android.com/apk/res/android">
 	android:id="@+id/close"
 	android:layout_below="@id/table01"
 	style="@style/FillWidth"
-	android:paddingTop="6dp"
+	android:layout_marginTop="6dp"
 	android:text="Close"/>
 </RelativeLayout>
