--- a/res/layout/gamelist_cell_online.xml
+++ b/res/layout/gamelist_cell_online.xml
@@ -11,26 +11,26 @@ xmlns:android="http://schemas.android.com/apk/res/android">
 	android:id="@+id/game_with"
 	android:layout_toRightOf="@id/cell_icon"
 	android:layout_alignParentTop="true"
-	android:paddingLeft="6dp"
+	android:layout_marginLeft="6dp"
 	android:textStyle="bold"
 	android:textSize="18dp"/>
 	<TextView
 	android:id="@+id/game_type"
 	android:layout_toRightOf="@id/cell_icon"
 	android:layout_alignParentBottom="true"
-	android:paddingLeft="6dp"
+	android:layout_marginLeft="6dp"
 	android:textSize="14dp"/>
 	<TextView
 	android:id="@+id/game_time"
 	android:layout_alignParentRight="true"
 	android:layout_alignParentBottom="true"
-	android:paddingRight="6dp"
+	android:layout_marginRight="6dp"
 	android:textSize="14dp"/>
 	<TextView
 	android:id="@+id/new_msgs"
 	android:layout_alignParentRight="true"
 	android:layout_alignParentTop="true"
-	android:paddingRight="6dp"
+	android:layout_marginRight="6dp"
 	android:textColor="#ff0000"
 	android:textSize="14dp"/>
 </RelativeLayout>
