--- a/res/layout/register.xml
+++ b/res/layout/register.xml
@@ -61,7 +61,7 @@ xmlns:android="http://schemas.android.com/apk/res/android">
 	android:id="@+id/email_header"
 	android:layout_below="@id/password2"
 	android:layout_alignParentLeft="true"
-	android:paddingLeft="12dp"
+	android:layout_marginLeft="12dp"
 	android:textSize="15sp"
 	android:text="Email"/>
 	<EditText
@@ -86,9 +86,9 @@ xmlns:android="http://schemas.android.com/apk/res/android">
 	<TextView
 	android:layout_above="@id/botbar"
 	android:layout_alignParentLeft="true"
-	android:paddingLeft="6dp"
-	android:paddingRight="6dp"
-	android:paddingBottom="3dp"
+	android:layout_marginLeft="6dp"
+	android:layout_marginRight="6dp"
+	android:layout_marginBottom="3dp"
 	android:textColor="#f00"
 	android:text="@string/register_notice"/>
 
