--- a/res/layout/register_confirm.xml
+++ b/res/layout/register_confirm.xml
@@ -14,7 +14,7 @@ xmlns:android="http://schemas.android.com/apk/res/android">
 		android:textColor="#000000"
 		android:text="@string/register_confirm"/>
 		<TableLayout
-		android:paddingTop="6dp"
+		android:layout_marginTop="6dp"
 		android:layout_gravity="center"
 		android:shrinkColumns="*">
 			<TableRow>
@@ -42,7 +42,7 @@ xmlns:android="http://schemas.android.com/apk/res/android">
 	<TableRow
 	style="@style/FillWidth"
 	android:layout_below="@id/layout01"
-	android:paddingTop="6dp">
+	android:layout_marginTop="6dp">
 		<Button
 		android:id="@+id/register_cancel"
 		style="@style/FillWidth"
