--- a/res/layout/rematch_confirm.xml
+++ b/res/layout/rematch_confirm.xml
@@ -42,7 +42,7 @@ xmlns:android="http://schemas.android.com/apk/res/android">
 	<TableRow
 	style="@style/FillWidth"
 	android:layout_below="@id/table01"
-	android:paddingTop="6dp">
+	android:layout_marginTop="6dp">
 		<Button
 		android:id="@+id/rematch_cancel"
 		style="@style/FillWidth"
