--- a/res/layout/settings.xml
+++ b/res/layout/settings.xml
@@ -12,7 +12,7 @@ xmlns:android="http://schemas.android.com/apk/res/android">
 	android:layout_above="@id/botbar">
 	<TableLayout
 	style="@style/FillWidth"
-	android:padding="6dp"
+	android:layout_margin="6dp"
 	android:shrinkColumns="*"
 	android:stretchColumns="1">
 		<TableRow>
