--- a/res/layout/settings.xml
+++ b/res/layout/settings.xml
@@ -34,7 +34,7 @@ xmlns:android="http://schemas.android.com/apk/res/android">
 			<TextView
 			android:layout_gravity="center_vertical"
 			android:textSize="18dp"
-			android:text="Polling Frequency"/>
+			android:text="Update Frequency"/>
 			<Spinner
 			android:layout_gravity="right"
 			android:id="@+id/poll_freq"/>
