add feedback button to main menu
The feedback button opens a google doc form for users to submit feedback.

--- a/res/layout/mainmenu.xml
+++ b/res/layout/mainmenu.xml
@@ -38,6 +38,11 @@ xmlns:android="http://schemas.android.com/apk/res/android">
 			android:id="@+id/login"
 			android:src="@drawable/mainlogin"/>
 		</TableRow>
+		<TableRow>
+			<com.chess.genesis.MyImageView
+			android:id="@+id/feedback"
+			android:src="@drawable/feedback"/>
+		</TableRow>
 	</TableLayout>
 	<com.chess.genesis.MyImageView
 	android:id="@+id/likefacebook"
