--- a/res/layout/msgbox.xml
+++ b/res/layout/msgbox.xml
@@ -16,6 +16,7 @@ xmlns:android="http://schemas.android.com/apk/res/android">
 		android:id="@+id/new_msg"
 		style="@style/FillWidth"
 		android:layout_weight="82"
+		android:inputType="textCapSentences|textMultiLine"
 		android:maxLength="140"/>
 		<com.chess.genesis.MyImageView
 		android:id="@+id/submit_msg"
