--- a/res/layout/login.xml
+++ b/res/layout/login.xml
@@ -46,16 +46,16 @@ xmlns:android="http://schemas.android.com/apk/res/android">
 	android:layout_width="120dp"
 	android:layout_below="@id/password"
 	android:layout_alignParentRight="true"
-	android:paddingTop="6dp"
-	android:paddingRight="8dp"
+	android:layout_margin="3dp"
+	android:paddingRight="15dp"
 	android:src="@drawable/login"/>
 	<com.chess.genesis.MyImageView
 	android:id="@+id/register"
 	android:layout_width="120dp"
 	android:layout_above="@id/botbar"
 	android:layout_alignParentRight="true"
-	android:paddingBottom="6dp"
-	android:paddingRight="8dp"
+	android:paddingRight="15dp"
+	android:layout_margin="8dp"
 	android:src="@drawable/register"/>
 	<com.chess.genesis.MyImageView
 	android:id="@+id/botbar"
