--- a/res/layout/mainmenu.xml
+++ b/res/layout/mainmenu.xml
@@ -49,8 +49,7 @@ xmlns:android="http://schemas.android.com/apk/res/android">
 	android:layout_width="160dp"
 	android:layout_above="@id/botbar"
 	android:layout_alignParentLeft="true"
-	android:paddingBottom="3dp"
-	android:paddingLeft="3dp"
+	android:layout_margin="3dp"
 	android:src="@drawable/facebook"/>
 	<TextView
 	android:id="@+id/beta"
