--- a/res/layout/msgbox.xml
+++ b/res/layout/msgbox.xml
@@ -23,6 +23,7 @@ xmlns:android="http://schemas.android.com/apk/res/android">
 		style="@style/FillWidth"
 		android:layout_weight="180"
 		android:layout_gravity="bottom"
+		android:layout_marginBottom="5dp"
 		android:src="@drawable/rsubmit"/>
 	</TableRow>
 	<com.chess.genesis.MyImageView
