--- a/res/layout/register.xml
+++ b/res/layout/register.xml
@@ -80,8 +80,8 @@ xmlns:android="http://schemas.android.com/apk/res/android">
 	android:layout_width="120dp"
 	android:layout_below="@id/email"
 	android:layout_alignParentRight="true"
-	android:paddingTop="6dp"
-	android:paddingRight="8dp"
+	android:layout_margin="3dp"
+	android:paddingRight="15dp"
 	android:src="@drawable/rsubmit"/>
 
 	<TextView
