--- a/res/layout/cputime_dialog.xml
+++ b/res/layout/cputime_dialog.xml
@@ -16,23 +16,21 @@ xmlns:android="http://schemas.android.com/apk/res/android">
 		<TextView
 		android:id="@+id/strength_index"
 		android:textColor="#000000"/>
-		<TableLayout
+		<TableRow
 		android:paddingTop="6dp"
 		android:layout_gravity="center"
 		android:shrinkColumns="*">
-			<TableRow>
-				<com.chess.genesis.NumberSpinner
-				android:id="@+id/time"
-				android:layout_width="72dp"/>
-				<TextView
-				android:textSize="18dp"
-				android:layout_marginLeft="6dp"
-				android:textColor="#000000"
-				android:layout_gravity="center"
-				android:gravity="center"
-				android:text="Seconds"/>
-			</TableRow>
-		</TableLayout>
+			<com.chess.genesis.NumberSpinner
+			android:id="@+id/time"
+			android:layout_width="72dp"/>
+			<TextView
+			android:textSize="18dp"
+			android:layout_marginLeft="6dp"
+			android:textColor="#000000"
+			android:layout_gravity="center"
+			android:gravity="center"
+			android:text="Seconds"/>
+		</TableRow>
 	</LinearLayout>
 	<TableRow
 	style="@style/FillWidth"
