--- a/res/layout/gamelist_listview.xml
+++ b/res/layout/gamelist_listview.xml
@@ -1,7 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ListView
+<FrameLayout
 xmlns:android="http://schemas.android.com/apk/res/android"
-android:id="@+id/game_list"
 android:layout_below="@+id/swipetabs"
-android:layout_above="@id/botbar"/>
+android:layout_above="@id/botbar">
+	<ListView
+	android:id="@+id/game_list"
+	style="@style/FillBoth"/>
+</FrameLayout>
 
