change onlinegame swipetab formatting
Increase tab font size and padding. Also change background color.

--- a/res/layout/swipetab_indicator.xml
+++ b/res/layout/swipetab_indicator.xml
@@ -21,10 +21,12 @@
 <TextView xmlns:android="http://schemas.android.com/apk/res/android"
 android:id="@+id/swipe_tab"
 android:layout_width="wrap_content"
-android:layout_height="30dp"
-android:paddingLeft="15dp"
-android:paddingRight="15dp"
+android:layout_height="wrap_content"
+android:paddingTop="4dp"
+android:paddingBottom="4dp"
+android:paddingLeft="16dp"
+android:paddingRight="16dp"
 android:focusable="true"
 android:singleLine="true"
-android:textSize="14dp"
+android:textSize="16dp"
 android:background="@drawable/swipetab_indicator"/>
