--- a/res/layout/gamelist_swipe.xml
+++ b/res/layout/gamelist_swipe.xml
@@ -14,9 +14,22 @@ xmlns:android="http://schemas.android.com/apk/res/android">
 		android:layout_weight="408"
 		android:src="@drawable/topbar_plus"/>
 	</TableRow>
+	<FrameLayout
+	android:id="@+id/frame_01"
+	style="@style/FillWidth"
+	android:layout_below="@id/table_01">
+		<TextView
+		android:id="@+id/game_search"
+		style="@style/FillWidth"
+		android:padding="4dp"
+		android:layout_gravity="center"
+		android:gravity="center"
+		android:textSize="16dp"
+		android:text="Searching For Opponents..."/>
+	</FrameLayout>
 	<com.chess.genesis.SwipeTabs
 	android:id="@+id/swipetabs"
-	android:layout_below="@id/table_01"
+	android:layout_below="@id/frame_01"
 	style="@style/FillWidth"
 	android:background="#ff383838"/>
 	<android.support.v4.view.ViewPager
