--- a/res/layout/delete_archive.xml
+++ b/res/layout/delete_archive.xml
@@ -2,7 +2,7 @@
 <RelativeLayout
 xmlns:android="http://schemas.android.com/apk/res/android">
 	<TableRow
-	android:id="@+id/table01"
+	android:id="@+id/layout01"
 	style="@style/FillWidth"
 	android:background="#ffffff"
 	android:paddingTop="12dp"
@@ -15,15 +15,15 @@ xmlns:android="http://schemas.android.com/apk/res/android">
 	</TableRow>
 	<TableRow
 	style="@style/FillWidth"
-	android:layout_below="@id/table01"
+	android:layout_below="@id/layout01"
 	android:layout_marginTop="6dp">
 		<Button
-		android:id="@+id/delete_cancel"
+		android:id="@+id/cancel"
 		style="@style/FillWidth"
 		android:layout_weight="50"
 		android:text="Cancel"/>
 		<Button
-		android:id="@+id/delete_ok"
+		android:id="@+id/ok"
 		style="@style/FillWidth"
 		android:layout_weight="50"
 		android:text="Delete"/>
