--- a/res/layout/game.xml
+++ b/res/layout/game.xml
@@ -2,7 +2,7 @@
 <RelativeLayout
 xmlns:android="http://schemas.android.com/apk/res/android">
 	<TableRow
-	android:id="@+id/table_01">
+	android:id="@+id/layout01">
 		<com.chess.genesis.MyImageView
 		android:id="@+id/topbar_genesis"
 		style="@style/FillWidth"
@@ -16,7 +16,7 @@ xmlns:android="http://schemas.android.com/apk/res/android">
 	</TableRow>
 	<com.chess.genesis.ViewFlip3D
 	android:id="@+id/board_flip"
-	android:layout_below="@id/table_01">
+	android:layout_below="@id/layout01">
 		<com.chess.genesis.BoardLayout
 		android:id="@+id/board_layout"/>
 		<com.chess.genesis.PlaceLayout
