--- a/res/layout/newlocalgame.xml
+++ b/res/layout/newlocalgame.xml
@@ -2,7 +2,7 @@
 <RelativeLayout
 xmlns:android="http://schemas.android.com/apk/res/android">
 	<TableLayout
-	android:id="@+id/table01"
+	android:id="@+id/layout01"
 	android:background="#ffffff"
 	android:paddingTop="12dp"
 	android:paddingBottom="12dp"
@@ -40,17 +40,17 @@ xmlns:android="http://schemas.android.com/apk/res/android">
 	</TableLayout>
 	<TableRow
 	style="@style/FillWidth"
-	android:layout_below="@id/table01"
+	android:layout_below="@id/layout01"
 	android:layout_marginTop="6dp">
 		<Button
 		style="@style/FillWidth"
 		android:layout_weight="50"
-		android:id="@+id/newgame_cancel"
+		android:id="@+id/cancel"
 		android:text="Cancel"/>
 		<Button
 		style="@style/FillWidth"
 		android:layout_weight="50"
-		android:id="@+id/newgame_ok"
+		android:id="@+id/ok"
 		android:text="Submit"/>
 	</TableRow>
 </RelativeLayout>
