--- a/res/layout/newnetworkgame.xml
+++ b/res/layout/newnetworkgame.xml
@@ -2,7 +2,7 @@
 <RelativeLayout
 xmlns:android="http://schemas.android.com/apk/res/android">
 	<TableLayout
-	android:id="@+id/table01"
+	android:id="@+id/layout01"
 	android:background="#ffffff"
 	android:paddingTop="12dp"
 	android:paddingBottom="12dp"
@@ -31,15 +31,15 @@ xmlns:android="http://schemas.android.com/apk/res/android">
 	</TableLayout>
 	<TableRow
 	style="@style/FillWidth"
-	android:layout_below="@id/table01"
+	android:layout_below="@id/layout01"
 	android:layout_marginTop="6dp">
 		<Button
-		android:id="@+id/newgame_cancel"
+		android:id="@+id/cancel"
 		style="@style/FillWidth"
 		android:layout_weight="50"
 		android:text="Cancel"/>
 		<Button
-		android:id="@+id/newgame_ok"
+		android:id="@+id/ok"
 		style="@style/FillWidth"
 		android:layout_weight="50"
 		android:text="Submit"/>
